# kona-open-ebrm

./: KONA_PRETRAINING.md  PUTNAM_NOTES.md  README.md  kona_cli.py  pyproject.toml  requirements.txt  start_sudoku_demo.ps1  sudoku_demo_app.py  sudoku_ebm.py  train_kona_ebrm.py
kona/: __init__.py  core.py  pretrain_data.py  pretrain_model.py  pretrain_runtime.py  sudoku.py
